Backend: Added get record conversion query
