# backend/Api/Controllers/Query/RecordsQueryController.cs
@@ -21,6 +21,10 @@ public class RecordsQueryController(IMediator mediator) : BaseController(mediato
     public async Task<IActionResult> GetRecordConversion([FromQuery] Guid? sourceId)
         => base.Ok(await Mediator.Send(new GetRecordTemplateConversionsQuery(sourceId)));
 
+    [HttpGet("conversions/{conversionId}")]
+    public async Task<IActionResult> GetRecordConversion(Guid conversionId)
+        => base.Ok(await Mediator.Send(new GetRecordConversionQuery(conversionId)));
+
     [HttpGet("conversions/{sourceId}/to/{targetId}")]
     public async Task<IActionResult> GetRecordConversion(Guid sourceId, Guid targetId)
         => base.Ok(await Mediator.Send(new GetRecordToRecordTemplateConversionsQuery(sourceId, targetId)));
