# backend/Api/OpenApi/siradig-calc.spec.json
@@ -1784,6 +1784,112 @@
       "UnresolvedReference": false,
       "Reference": null
     },
+    "/api/records/conversions/{conversionId}": {
+      "Summary": null,
+      "Description": null,
+      "Operations": {
+        "Get": {
+          "Tags": [
+            {
+              "Name": "RecordsQuery",
+              "Description": null,
+              "ExternalDocs": null,
+              "Extensions": {},
+              "UnresolvedReference": false,
+              "Reference": null
+            }
+          ],
+          "Summary": null,
+          "Description": null,
+          "ExternalDocs": null,
+          "OperationId": null,
+          "Parameters": [
+            {
+              "UnresolvedReference": false,
+              "Reference": null,
+              "Name": "conversionId",
+              "In": 2,
+              "Description": null,
+              "Required": true,
+              "Deprecated": false,
+              "AllowEmptyValue": false,
+              "Style": 3,
+              "Explode": false,
+              "AllowReserved": false,
+              "Schema": {
+                "Title": null,
+                "Type": "string",
+                "Format": "uuid",
+                "Description": null,
+                "Maximum": null,
+                "ExclusiveMaximum": null,
+                "Minimum": null,
+                "ExclusiveMinimum": null,
+                "MaxLength": null,
+                "MinLength": null,
+                "Pattern": null,
+                "MultipleOf": null,
+                "Default": null,
+                "ReadOnly": false,
+                "WriteOnly": false,
+                "AllOf": [],
+                "OneOf": [],
+                "AnyOf": [],
+                "Not": null,
+                "Required": [],
+                "Items": null,
+                "MaxItems": null,
+                "MinItems": null,
+                "UniqueItems": null,
+                "Properties": {},
+                "MaxProperties": null,
+                "MinProperties": null,
+                "AdditionalPropertiesAllowed": true,
+                "AdditionalProperties": null,
+                "Discriminator": null,
+                "Example": null,
+                "Enum": [],
+                "Nullable": false,
+                "ExternalDocs": null,
+                "Deprecated": false,
+                "Xml": null,
+                "Extensions": {},
+                "UnresolvedReference": false,
+                "Reference": null,
+                "Annotations": null
+              },
+              "Examples": {},
+              "Example": null,
+              "Content": {},
+              "Extensions": {}
+            }
+          ],
+          "RequestBody": null,
+          "Responses": {
+            "200": {
+              "Description": "OK",
+              "Headers": {},
+              "Content": {},
+              "Links": {},
+              "Extensions": {},
+              "UnresolvedReference": false,
+              "Reference": null
+            }
+          },
+          "Callbacks": {},
+          "Deprecated": false,
+          "Security": [],
+          "Servers": [],
+          "Extensions": {},
+          "Annotations": null
+        }
+      },
+      "Servers": [],
+      "Parameters": [],
+      "Extensions": {},
+      "UnresolvedReference": false,
+      "Reference": null
+    },
     "/api/records/conversions/{sourceId}/to/{targetId}": {
       "Summary": null,
       "Description": null,
@@ -6341,6 +6447,6 @@
   "Tags": [],
   "ExternalDocs": null,
   "Extensions": {},
-  "HashCode": "A055B829FA460E36BF45E3251F52083C3271E0DA4556DD6D0241957705B9EA570BB72F6AEB5F69740E3B766345D024E07060DF3DEB49B1AE7B873D7B1EE4A727",
+  "HashCode": "2BEA3983B4E65FE674BB36BFF87878A2F89C5F091DE6526489D719879D1E05263A5289FB6F01A3D565AB83C04F6ED0C086EB05C4D2B57B4EDC3F49B4EFBCA030",
   "Annotations": null
 }
